sass/index.scss
/* ... */
#teardown {
	position: relative;

	#hammer {
		background: url("assets/sprites.gif") 0 -80px;

		@media (prefers-color-scheme: dark) {
			filter: invert(1);
		}
	}

	#teardown-text {
		display: inline-block;
		transform-origin: top left;
		transition: var(--transition);
	}

	&:hover #teardown-text {
		animation: hinge 2s;

		// Stolen from https://animate.style
		@keyframes hinge {
			from {
				animation-timing-function: ease-in-out;
			}

			20%,
			60% {
				transform: rotate(80deg);
				animation-timing-function: ease-in-out;
			}

			40%,
			80% {
				transform: rotate(60deg);
				opacity: 1;
				animation-timing-function: ease-in-out;
			}

			to {
				transform: translateY(45rem);
				opacity: 0;
			}
		}
	}
}

#superliminal {
	position: relative;

	#pawn {
		background: url("assets/sprites.gif") 0 -96px;
	}

	#super,
	#liminal {
		display: inline-block;
		transition: var(--transition-longer);
	}

	&:hover {
		#super {
			transform: perspective(4rem) rotateY(-45deg);
		}

		#liminal {
			transform: perspective(4rem) rotateY(35deg);
		}
	}
}

#stardew {
	position: relative;

	#chicken {
		background: url("assets/sprites.gif") 0 -112px;
	}

	#stardew-text {
		transition: var(--transition);
	}

	&:hover #stardew-text {
		color: #e0a100;
		font-weight: bold;
		text-shadow: 0 0.0625rem 0 #413014;
	}
}

#untitled {
	position: relative;

	#goose {
		background: url("assets/sprites.gif") 0 -128px;
	}

	#untitled-text {
		transition: var(--transition);
	}

	&:hover #untitled-text {
		font-weight: bold;
	}
}

#stanley {
	position: relative;

	#boss {
		background: url("assets/sprites.gif") 0 -144px;
	}

	#adventure-line {
		display: none;
	}

	&:hover #stanley-text {
		text-decoration: underline;
		text-decoration-color: #ffd600;
		text-decoration-thickness: 0.25rem;
		text-transform: uppercase;

		#adventure-line {
			display: inline;
		}
	}
}

// Who's shy?
#shy {
	-webkit-appearance: none;
	appearance: none;
	transition: var(--transition);
	cursor: pointer;
	border: none;
	background-color: transparent;
	padding: 0;
	color: var(--fg-color);
	font-size: 1em;
	text-decoration: underline;
	text-decoration-style: dotted;
	text-decoration-thickness: max(1px, 0.0625em);

	&:hover {
		text-decoration-style: solid;
	}

	&:disabled {
		cursor: not-allowed;
		color: var(--fg-muted-5);
	}
}

// Ah, that's who
#fluttershy {
	position: fixed;
	right: calc((100vw - var(--container-width)) / 2);
	bottom: 0;
	transform: translateY(100%);
	animation: peek var(--transition-long);
	margin: 0;

	@keyframes peek {
		50%,
		75% {
			transform: translateY(0);
		}
	}
}

#window {
	display: block;
	position: relative;
	float: inline-end;
	margin-inline-start: 1rem;
	box-shadow: 0 0.75rem 1.5rem -1rem rgba(0, 0, 0, 0.5);
	border: 4rem solid transparent;
	border-image: url("assets/border.gif") 32 repeat;
	image-rendering: pixelated;
	width: min(18rem, 100%);
	height: 11rem;

	#window-contents {
		-webkit-backdrop-filter: var(--blur);
		position: absolute;
		// Get around bulky empty space caused by the image border
		top: -2rem;
		right: -3.625rem;
		bottom: -3.4375rem;
		left: -3.625rem;
		backdrop-filter: var(--blur);
		background-color: var(--nav-bg);
		padding: 1rem;
		overflow: auto;

		#rainbow-text {
			display: inline-block;

			span {
				display: block;
				animation: rainbow 1.2s steps(1, end) infinite;
				font-weight: bold;
				line-height: 0.75;
				letter-spacing: -0.05em;

				&:nth-child(1) {
					color: #ff6188;
				}

				&:nth-child(2) {
					animation-delay: 0.2s;
					color: #fc9867;
				}

				&:nth-child(3) {
					animation-delay: 0.4s;
					color: #ffd866;
				}

				&:nth-child(4) {
					animation-delay: 0.6s;
					color: #a9dc76;
				}

				&:nth-child(5) {
					animation-delay: 0.8s;
					color: #78dce8;
				}

				&:nth-child(6) {
					animation-delay: 1s;
					color: #ab9df2;
				}

				@keyframes rainbow {
					from {
						color: #ff6188;
					}

					16.66% {
						color: #fc9867;
					}

					33.33% {
						color: #ffd866;
					}

					50% {
						color: #a9dc76;
					}

					66.66% {
						color: #78dce8;
					}

					83.33% {
						color: #ab9df2;
					}

					// The last step is skipped, which is why it's not set
				}
			}
		}
	}

	@media only screen and (max-width: 720px) {
		float: none;
		margin: 1rem auto 0;
	}
}

// 88x31 buttons
.buttons-container {
	text-align: center;

	img {
		display: inline-block;
		position: relative; // Prevent buttons from overlapping during transitions
		transition: var(--transition-bezier);
		margin: 0;
		box-shadow: none;
		border-radius: 0;
		background-color: transparent;
		image-rendering: pixelated;

		&:hover {
			transform: scale(2) !important; // Arrgh
			box-shadow:
				0 0 0 0.0625rem var(--primary-color-alpha),
				0 0.125rem 0.375rem 0.125rem var(--primary-color-alpha),
				0 0.25rem 1.5rem 0.25rem var(--primary-color-alpha) !important; // Arrgh 2x
		}
	}
}

.dialog-buttons {
	position: relative;

	.inline-button:hover+#dont,
	.inline-button:focus-visible+#dont {
		transform: none;
		opacity: 1;
	}

	@supports not selector(:focus-visible) {
		.inline-button:focus+#dont {
			transform: none;
			opacity: 1;
		}
	}

	#dont {
		$url: url("assets/dont.png");
		-webkit-mask-image: $url;
		-webkit-pointer-events: none;
		position: absolute;
		top: calc(-50% + -1.1875rem);
		left: 6.5rem;
		transform: scale(0.5);
		transform-origin: left;
		opacity: 0;
		mask-image: $url;
		transition: var(--transition);
		background-color: var(--primary-color);
		width: 22.25rem;
		height: 7.0625rem;
		pointer-events: none;

		@media only screen and (max-width: 484px) {
			display: none;
		}

		@media (prefers-reduced-motion) {
			$url: url("assets/dont-static.png");
			-webkit-mask-image: $url;
			mask-image: $url;
		}
	}
}
/* ... */

